--- a/.github/workflows/Build_HomeLede_x86_64.yml
+++ b/.github/workflows/Build_HomeLede_x86_64.yml
@@ -76,9 +76,6 @@ jobs:
         ./scripts/feeds install -a
         ./prepareCompile.sh
        
-    - name: Generate configuration file
-      run: make defconfig
-
     #- name: Import external feeds - passwall
     #  working-directory: ./openwrt
     #  run: |
@@ -90,13 +87,13 @@ jobs:
     #  run: |
     #    git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku
 
-    #- name: Configuration Customization - Build_x86_64
+    - name: Configuration Customization - Build_x86_64
     #  env:
     #    CONFIG_FILE: 'x86_64.config'
     #  run: |
     #    [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
     #    chmod +x ./customize.sh && ./customize.sh
-    #    cd openwrt && make defconfig
+        cd openwrt && make defconfig
         
     - name: Download package
       working-directory: ./openwrt
