--- a/.github/workflows/Build_HomeLede_x86_64.yml
+++ b/.github/workflows/Build_HomeLede_x86_64.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Configuration Customization - Build_x86_64
     #  env:
     #    CONFIG_FILE: 'x86_64.config'
-    #  run: |
+      run: |
     #    [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
     #    chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
